--- a/app/src/main/res/layout/activity_user_name.xml
+++ b/app/src/main/res/layout/activity_user_name.xml
@@ -29,6 +29,7 @@
                 android:layout_marginBottom="16dp"
                 android:background="@color/colorPrimaryDark"
                 android:gravity="center"
+                android:hint="@string/user_name_editview"
                 android:inputType="textCapWords"
                 android:padding="8dp"
                 android:textColor="#FFFFFF"
