--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -20,14 +20,11 @@
                 android:src="@drawable/cr_flag1" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/ButtonStyle"
                 android:layout_below="@+id/cr_flag"
-                android:layout_centerInParent="true"
-                android:padding="16dp"
                 android:onClick="startQuiz"
                 android:text="@string/start"
-                android:textColor="#FFFFFF" />
+                />
 
         </RelativeLayout>
 
