--- a/app/src/main/res/layout/activity_user_name.xml
+++ b/app/src/main/res/layout/activity_user_name.xml
@@ -20,7 +20,7 @@
 
 
             <EditText
-                android:id="@+id/user_name"
+                android:id="@+id/edit_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/cr_flag"
